imporve file structure

--- a/journal.html
+++ b/journal.html
@@ -40,7 +40,7 @@
             </a>
         </ul>
     </nav>
-    <form action="./add_entry.php" method="post" class="app">
+    <form action="./controllers/add_entry.php" method="post" class="app">
         <div class="form-container">
             <div></div>
             <div class="todo-panel">
