--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Micro Cloud</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="static/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
 </head>
@@ -53,7 +53,7 @@
                 </a>
             </div> 
             <div>
-                <a class="dash-item" href="#">
+                <a class="dash-item" href="./stats.php">
                     <i class="fa fa-line-chart spc-1"></i>
                     <br>
                    <span class="sup-text">Productivity Analytics</span> 
