--- a/todo-list.html
+++ b/todo-list.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
 </head>
 <body class="todo-bg">
-    <nav class="topnav" id="myTopnav">
+    <nav class="topnav parent-nav" id="myTopnav">
         <ul>
             <li>
                 <a href="./index.html" class="active">Micro Cloud</a>
