--- a/journal.html
+++ b/journal.html
@@ -47,18 +47,19 @@
                 <h1>Journal Application</h1>
                 <input type="text" name="jsubject" placeholder="Type Subject of Entry" id="form-control" class="spc-n" required>
                 <br><br>
-                <textarea rows="7" cols="35" placeholder="Text area for writting notes" name="note"></textarea>
+                <textarea rows="7" cols="55" placeholder="Text area for writting notes" name="note"></textarea>
                 <br><br>
-                <input type="range" min="0" max="10" value="5" class="slider" id="myRange" name="rating" required>
-
-                <div class="j-box">
-                    <b><p>Mood Rating: <span id="demo"></span></p></b>
-                    <div style="text-align: left;">
-                        <p class="attach"><a href="#" id="myBtn">Add Attachment</a></p>
+		<div class="sec-2">
+                    <input type="range" min="0" max="10" value="5" class="slider" id="myRange" name="rating" required>
+                    <div class="j-box">
+                        <b><p>Mood Rating: <span id="demo"></span></p></b>
+                        <div style="text-align: left;">
+                            <p class="attach"><a href="#" id="myBtn">Add Attachment</a></p>
+                        </div>
                     </div>
-                </div>
-                <input name="add-journal" class="spc-n" id="form-control" type="submit">
-                <br>
+   	 	    <input name="add-journal" class="spc-n" id="form-control" type="submit">
+                    <br>
+		</div>
             </div>
             <div></div>
         </div>
