--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 </div>
             </li>
             <li>
-                <a href="./views/join-chat.php">Votting App</a>
+                <a href="./views/polls.php">Votting App</a>
             </li>
             <li class="dropdown">
                 <a href="javascript:void(0)" class="dropbtn">Todo List</a>
@@ -74,7 +74,7 @@
                 </a>
             </div>
             <div>
-                <a class="dash-item" href="./views/logs.php">
+                <a class="dash-item" href="./views/polls.php">
                     <i class="fa fa-bar-chart spc-1"></i>
                     <br>
                     <span class="sup-text">Votting App</span>
@@ -84,7 +84,7 @@
                 <a class="dash-item" href="./views/show-tasks.php">
                     <i class="fa fa-list-ol spc-1"></i>
                     <br>
-                   <span class="sup-text">Manage Tasks</span> 
+                   <span class="sup-text">To Do List</span> 
                 </a>
             </div>
             <div>
