--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
                 <a href="./views/join-chat.php">Chatrooms</a>
             </li>
             <li>
-                <a href="#">Music</a>
+                <a href="#">Music App</a>
             </li>
             <li class="dropdown">
                 <a href="javascript:void(0)" class="dropbtn">Journal App</a>
                 <div class="dropdown-content">
-                    <a href="./views/journal.html">Create Entry</a>
+                    <a href="./views/create-journal.php">Create Entry</a>
                     <a href="./views/logs.php">All Entries</a>
                 </div>
             </li>
@@ -70,7 +70,7 @@
                 <a class="dash-item" href="./views/logs.php">
                     <i class="fa  fa-file-text-o spc-1"></i>
                     <br>
-                    <span class="sup-text">HTML Notepad</span>
+                    <span class="sup-text">HTML Journal</span>
                 </a>
             </div>
             <div>
