frontend bug fixes

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <i class="fa fa-mixcloud"></i>
             </li>
         </ul>
-        <ul>
+        <ul class="topnav-list">
             <li>
                 <a href="./views/join-chat.php">Chatrooms</a>
             </li>
