--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
     <main>
         <div class="grid-container">
             <div>
-                <a class="dash-item" href="./views/join-chat.php">
-                    <i class="fa  fa-comments-o spc-1"></i>
+                <a class="dash-item" href="./views/logs.php">
+                    <i class="fa  fa-pencil spc-1"></i>
                     <br>
-                    <span class="sup-text">Chat Room</span>
+                    <span class="sup-text">HTML Journal</span>
                 </a>
             </div>
             <div>
@@ -67,10 +67,10 @@
                 </a>
             </div>
             <div>
-                <a class="dash-item" href="./views/logs.php">
-                    <i class="fa  fa-file-text-o spc-1"></i>
+                <a class="dash-item" href="./views/join-chat.php">
+                    <i class="fa  fa-comments-o spc-1"></i>
                     <br>
-                    <span class="sup-text">HTML Journal</span>
+                    <span class="sup-text">Chat Room</span>
                 </a>
             </div>
             <div>
