last commit before changing product features

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Micro Cloud</title>
+    <title>Micro Server</title>
     <link rel="stylesheet" href="static/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
@@ -12,8 +12,8 @@
     <nav class="topnav index-nav parent-nav" id="myTopnav">
         <ul>
             <li>
-                <a href="#" class="active">Micro Cloud</a>
-                <i class="fa fa-mixcloud"></i>
+                <a href="#" class="active">Micro Server</a>
+                <i class="fa fa-wifi"></i>
             </li>
         </ul>
         <ul class="topnav-list">
@@ -61,9 +61,9 @@
             </div>
             <div>
                 <a class="dash-item" href="./views/logs.php">
-                    <i class="fa fa-music spc-1"></i>
+                    <i class="fa fa-database spc-1"></i>
                     <br>
-                    <span class="sup-text">Music Player</span>
+                    <span class="sup-text">N.A.S Interface</span>
                 </a>
             </div>
             <div>
