testing shell_exec_2

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 </a>
             </div>
             <div>
-                <a class="dash-item" href="./views/logs.php">
+                <a class="dash-item" href="./controllers/shell-output.php">
                     <i class="fa fa-database spc-1"></i>
                     <br>
                     <span class="sup-text">N.A.S Interface</span>
