--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <a class="dash-item" href="./controllers/shell-output.php">
                     <i class="fa fa-database spc-1"></i>
                     <br>
-                    <span class="sup-text">N.A.S Interface</span>
+                    <span class="sup-text">Data Storage</span>
                 </a>
             </div>
             <div>
