deleted shell output file

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
                 <a href="./views/polls.php">Votting App</a>
             </li>
             <li class="dropdown">
-                <a href="javascript:void(0)" class="dropbtn">Todo List</a>
+                <a href="javascript:void(0)" class="dropbtn">Task List</a>
                 <div class="dropdown-content">
-                    <a href="./views/todo-list.html">Add Task</a>
+                    <a href="./views/create-task.php">Add Task</a>
                     <a href="./views/show-tasks.php">Manage Tasks</a>
                 </div>
             </li>
@@ -60,7 +60,7 @@
                 </a>
             </div>
             <div>
-                <a class="dash-item" href="./controllers/shell-output.php">
+                <a class="dash-item" href="./views/uploaded-data.php">
                     <i class="fa fa-database spc-1"></i>
                     <br>
                     <span class="sup-text">Data Storage</span>
@@ -84,7 +84,7 @@
                 <a class="dash-item" href="./views/show-tasks.php">
                     <i class="fa fa-list-ol spc-1"></i>
                     <br>
-                   <span class="sup-text">To Do List</span> 
+                   <span class="sup-text">Task List</span> 
                 </a>
             </div>
             <div>
