cleared test uploads

--- a/index.html
+++ b/index.html
@@ -21,24 +21,26 @@
                 <a href="./views/join-chat.php">Chatrooms</a>
             </li>
             <li>
-                <a href="#">Music App</a>
+                <a href="#">Data Storage</a>
             </li>
             <li class="dropdown">
-                <a href="javascript:void(0)" class="dropbtn">Journal App</a>
+                <a href="javascript:void(0)" class="dropbtn">Note Station</a>
                 <div class="dropdown-content">
-                    <a href="./views/create-journal.php">Create Entry</a>
+                    <a href="./views/create-journal.php">Create Note</a>
+                    <a href="./views/categories.php">Note Categories</a>
                     <a href="./views/logs.php">All Entries</a>
                 </div>
             </li>
-            <li>
-                <a href="./views/polls.php">Votting App</a>
-            </li>
+            
             <li class="dropdown">
                 <a href="javascript:void(0)" class="dropbtn">Task List</a>
                 <div class="dropdown-content">
                     <a href="./views/create-task.php">Add Task</a>
                     <a href="./views/show-tasks.php">Manage Tasks</a>
                 </div>
+            </li>
+            <li>
+                <a href="./views/polls.php">Votting App</a>
             </li>
             <li>
                 <a href="./views/stats.php">Analytics</a>
