--- a/index.html
+++ b/index.html
@@ -18,9 +18,6 @@
         </ul>
         <ul class="topnav-list">
             <li>
-                <a href="./views/join-chat.php">Chatrooms</a>
-            </li>
-            <li>
                 <a href="#">Data Storage</a>
             </li>
             <li class="dropdown">
@@ -31,13 +28,15 @@
                     <a href="./views/logs.php">All Entries</a>
                 </div>
             </li>
-            
             <li class="dropdown">
                 <a href="javascript:void(0)" class="dropbtn">Task List</a>
                 <div class="dropdown-content">
                     <a href="./views/create-task.php">Add Task</a>
                     <a href="./views/show-tasks.php">Manage Tasks</a>
                 </div>
+            </li>
+            <li>
+                <a href="./views/join-chat.php">Chatrooms</a>
             </li>
             <li>
                 <a href="./views/polls.php">Votting App</a>
@@ -55,13 +54,6 @@
     <main>
         <div class="grid-container">
             <div>
-                <a class="dash-item" href="./views/logs.php">
-                    <i class="fa  fa-pencil spc-1"></i>
-                    <br>
-                    <span class="sup-text">HTML Journal</span>
-                </a>
-            </div>
-            <div>
                 <a class="dash-item" href="./views/uploaded-data.php">
                     <i class="fa fa-database spc-1"></i>
                     <br>
@@ -76,10 +68,10 @@
                 </a>
             </div>
             <div>
-                <a class="dash-item" href="./views/polls.php">
-                    <i class="fa fa-bar-chart spc-1"></i>
+                <a class="dash-item" href="./views/logs.php">
+                    <i class="fa  fa-pencil spc-1"></i>
                     <br>
-                    <span class="sup-text">Votting App</span>
+                    <span class="sup-text">Note Station</span>
                 </a>
             </div>
             <div>
@@ -87,6 +79,13 @@
                     <i class="fa fa-list-ol spc-1"></i>
                     <br>
                    <span class="sup-text">Task List</span> 
+                </a>
+            </div>
+            <div>
+                <a class="dash-item" href="./views/polls.php">
+                    <i class="fa fa-bar-chart spc-1"></i>
+                    <br>
+                    <span class="sup-text">Votting App</span>
                 </a>
             </div>
             <div>
