--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </ul>
         <ul class="topnav-list">
             <li>
-                <a href="#">Data Storage</a>
+                <a href="./views/data-storage.php">Data Storage</a>
             </li>
             <li class="dropdown">
                 <a href="javascript:void(0)" class="dropbtn">Note Station</a>
@@ -54,7 +54,7 @@
     <main>
         <div class="grid-container">
             <div>
-                <a class="dash-item" href="./views/uploaded-data.php">
+                <a class="dash-item" href="./views/data-storage.php">
                     <i class="fa fa-database spc-1"></i>
                     <br>
                     <span class="sup-text">Data Storage</span>
