--- a/index.html
+++ b/index.html
@@ -9,47 +9,49 @@
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
 </head>
 <body class="dash-bg">
-    <nav class="topnav index-nav parent-nav" id="myTopnav">
-        <ul>
-            <li>
-                <a href="#" class="active">Micro Server</a>
-                <i class="fa fa-wifi"></i>
-            </li>
-        </ul>
-        <ul class="topnav-list">
-            <li>
-                <a href="./views/data-storage.php">Data Storage</a>
-            </li>
-            <li class="dropdown">
-                <a href="javascript:void(0)" class="dropbtn">Note Station</a>
-                <div class="dropdown-content">
-                    <a href="./views/create-journal.php">Create Note</a>
-                    <a href="./views/categories.php">Note Categories</a>
-                    <a href="./views/logs.php">All Entries</a>
-                </div>
-            </li>
-            <li class="dropdown">
-                <a href="javascript:void(0)" class="dropbtn">Task List</a>
-                <div class="dropdown-content">
-                    <a href="./views/create-task.php">Add Task</a>
-                    <a href="./views/show-tasks.php">Manage Tasks</a>
-                </div>
-            </li>
-            <li>
-                <a href="./views/join-chat.php">Chatrooms</a>
-            </li>
-            <li>
-                <a href="./views/polls.php">Votting App</a>
-            </li>
-            <li>
-                <a href="./views/stats.php">Analytics</a>
-            </li>
-            <li><a href="#">Donate</a></li>
-            <li><a href="#">GitHub</a></li>
-            <a href="javascript:void(0);" class="icon" onclick="navToggle()">
-                <i class="fa fa-bars"></i>
-            </a>
-        </ul>
+    <nav class="topnav" id="myTopnav">
+        <div class="index-nav parent-nav">
+            <ul>
+                <li>
+                    <a href="#" class="active">Micro Server</a>
+                    <i class="fa fa-wifi"></i>
+                </li>
+            </ul>
+            <ul class="topnav-list">
+                <li>
+                    <a href="./views/data-storage.php">Data Storage</a>
+                </li>
+                <li class="dropdown">
+                    <a href="javascript:void(0)" class="dropbtn">Note Station</a>
+                    <div class="dropdown-content">
+                        <a href="./views/create-journal.php">Create Note</a>
+                        <a href="./views/categories.php">Note Categories</a>
+                        <a href="./views/logs.php">All Entries</a>
+                    </div>
+                </li>
+                <li class="dropdown">
+                    <a href="javascript:void(0)" class="dropbtn">Task List</a>
+                    <div class="dropdown-content">
+                        <a href="./views/create-task.php">Add Task</a>
+                        <a href="./views/show-tasks.php">Manage Tasks</a>
+                    </div>
+                </li>
+                <li>
+                    <a href="./views/join-chat.php">Chatrooms</a>
+                </li>
+                <li>
+                    <a href="./views/polls.php">Votting App</a>
+                </li>
+                <li>
+                    <a href="./views/stats.php">Analytics</a>
+                </li>
+                <li><a href="#">Donate</a></li>
+                <li><a href="#">GitHub</a></li>
+                <a href="javascript:void(0);" class="icon" onclick="navToggle()">
+                    <i class="fa fa-bars"></i>
+                </a>
+            </ul>
+        </div>
     </nav>
     <main>
         <div class="grid-container">
