testing host authentication process

--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
                 <li>
                     <a href="./views/stats.php">Analytics</a>
                 </li>
-                <li><a href="#">Donate</a></li>
-                <li><a href="#">GitHub</a></li>
+                <li><a href="#">Settings</a></li>
                 <a href="javascript:void(0);" class="icon" onclick="navToggle()">
                     <i class="fa fa-bars"></i>
                 </a>
