adjusted dashboard ui and fixed nl2br functions

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="static/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="favicon.png" >
 </head>
 <body class="dash-bg">
     <nav class="topnav" id="myTopnav">
@@ -55,10 +56,10 @@
     <main>
         <div class="grid-container">
             <div>
-                <a class="dash-item" href="./views/data-storage.php">
-                    <i class="fa fa-database spc-1"></i>
+                <a class="dash-item" href="./views/logs.php">
+                    <i class="fa  fa-pencil spc-1"></i>
                     <br>
-                    <span class="sup-text">Data Storage</span>
+                    <span class="sup-text">Note Station</span>
                 </a>
             </div>
             <div>
@@ -69,10 +70,10 @@
                 </a>
             </div>
             <div>
-                <a class="dash-item" href="./views/logs.php">
-                    <i class="fa  fa-pencil spc-1"></i>
+                <a class="dash-item" href="./views/data-storage.php">
+                    <i class="fa fa-database spc-1"></i>
                     <br>
-                    <span class="sup-text">Note Station</span>
+                    <span class="sup-text">Data Storage</span>
                 </a>
             </div>
             <div>
