started storage space feature

--- a/index.html
+++ b/index.html
@@ -69,14 +69,14 @@
                 <a class="dash-item" href="./views/join-chat.php">
                     <i class="fa  fa-comments-o spc-1"></i>
                     <br>
-                    <span class="sup-text">Chat Room</span>
+                    <span class="sup-text">Available Storage</span>
                 </a>
             </div>
             <div>
                 <a class="dash-item" href="./views/data-storage.php">
                     <i class="fa fa-database spc-1"></i>
                     <br>
-                    <span class="sup-text">Data Storage</span>
+                    <span class="sup-text">Upload Data</span>
                 </a>
             </div>
             <div>
