Rename to Note Web

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Micro Server</title>
+    <title>Note Station</title>
     <link rel="stylesheet" href="static/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
@@ -23,7 +23,7 @@
                     <a href="./views/data-storage.php">Data Storage</a>
                 </li>
                 <li class="dropdown">
-                    <a href="javascript:void(0)" class="dropbtn">Note Station</a>
+                    <a href="javascript:void(0)" class="dropbtn">Note Web</a>
                     <div class="dropdown-content">
                         <a href="./views/create-journal.php">Create Note</a>
                         <a href="./views/categories.php">Note Categories</a>
@@ -62,28 +62,14 @@
                 <a class="dash-item" href="./views/logs.php">
                     <i class="fa  fa-pencil spc-1"></i>
                     <br>
-                    <span class="sup-text">Note Station</span>
-                </a>
-            </div>
-            <div>
-                <a class="dash-item" href="./views/join-chat.php">
-                    <i class="fa  fa-comments-o spc-1"></i>
-                    <br>
-                    <span class="sup-text">Available Storage</span>
-                </a>
-            </div>
-            <div>
-                <a class="dash-item" href="./views/data-storage.php">
-                    <i class="fa fa-database spc-1"></i>
-                    <br>
-                    <span class="sup-text">Upload Data</span>
+                    <span class="sup-text">View Notes</span>
                 </a>
             </div>
             <div>
                 <a class="dash-item" href="./views/show-tasks.php">
                     <i class="fa fa-list-ol spc-1"></i>
                     <br>
-                   <span class="sup-text">Task List</span> 
+                   <span class="sup-text">View Tasks</span> 
                 </a>
             </div>
             <div>
@@ -97,9 +83,26 @@
                 <a class="dash-item" href="./views/polls.php">
                     <i class="fa fa-bar-chart spc-1"></i>
                     <br>
-                    <span class="sup-text">Additional Apps</span>
+                    <span class="sup-text">Bonus Apps</span>
                 </a>
             </div>
+            <!--
+            <div>
+                <a class="dash-item" href="./views/join-chat.php">
+                    <i class="fa  fa-comments-o spc-1"></i>
+                    <br>
+                    <span class="sup-text">Available Storage</span>
+                </a>
+            </div>
+
+            <div>
+                <a class="dash-item" href="./views/data-storage.php">
+                    <i class="fa fa-database spc-1"></i>
+                    <br>
+                    <span class="sup-text">Upload Data</span>
+                </a>
+            </div>
+            -->
         </div>
     </main>
     <script src="./static/main.js"></script>
