revamp on task list

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Note Web</title>
+    <title>Note Console</title>
     <link rel="stylesheet" href="static/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
@@ -14,7 +14,7 @@
         <div class="index-nav parent-nav">
             <ul>
                 <li>
-                    <a href="#" class="active">Note Web</a>
+                    <a href="#" class="active">Note Console</a>
                     <i class="fa fa-wifi"></i>
                 </li>
             </ul>
@@ -37,13 +37,13 @@
                     </div>
                 </li>
                 <li>
-                    <a href="./views/stats.php">Analytics</a>
+                    <a href="./views/analytics.php">Analytics</a>
                 </li>
                 <li class="dropdown">
                     <a href="javascript:void(0)" class="dropbtn">Bonus Apps</a>
                     <div class="dropdown-content">
-                        <a href="./views/data-storage.php">Data Storage</a>
-                        <a href="./views/join-chat.php">Chatrooms</a>
+                        <a href="./views/bonus_apps/data-storage.php">Data Storage</a>
+                        <a href="./views/bonus_apps/join-chat.php">Chatrooms</a>
                         <a href="./views/bonus_apps/polls.php">Votting App</a>
                     </div>
                 </li>
@@ -73,7 +73,7 @@
                 </a>
             </div>
             <div>
-                <a class="dash-item" href="./views/stats.php">
+                <a class="dash-item" href="./views/analytics.php">
                     <i class="fa fa-line-chart spc-1"></i>
                     <br>
                    <span class="sup-text">Analytics</span> 
