progress on analytics section

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
+<!-- Possibly rename to Conscience Console -->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Note Console</title>
+    <title>ConscienceC</title>
     <link rel="stylesheet" href="static/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
@@ -14,7 +15,7 @@
         <div class="index-nav parent-nav">
             <ul>
                 <li>
-                    <a href="#" class="active">Note Console</a>
+                    <a href="#" class="active">Consciencec</a>
                     <i class="fa fa-wifi"></i>
                 </li>
             </ul>
@@ -57,6 +58,16 @@
         </div>
     </nav>
     <main>
+        <div class="home-intro">
+            <h1 class="intro-header">Welcome to the Console!</h1>
+            <p class="intro-desc">It's a pretty decent way to track your tasks and ideas.</p>
+        </div>
+        <footer class="dash-footer">
+            <h3><a>About</a></h3>
+            <h3><a>Network Setup</a></h3>
+            <h3><a>GitHub Repo</a></h3>
+            <h3><a>Donations</a></h3>
+        </footer>
         <div class="grid-container">
             <div>
                 <a class="dash-item" href="./views/logs.php">
@@ -105,6 +116,7 @@
             -->
         </div>
     </main>
+
     <script src="./static/main.js"></script>
 </body>
 </html>
