--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ConscienceC</title>
+    <title>Consciencec - productivity applications</title>
     <link rel="stylesheet" href="static/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
@@ -60,14 +60,8 @@
     <main>
         <div class="home-intro">
             <h1 class="intro-header">Welcome to the Console!</h1>
-            <p class="intro-desc">It's a pretty decent way to track your tasks and ideas.</p>
+            <p class="intro-desc">This is a pretty decent way to track your tasks and ideas.</p>
         </div>
-        <footer class="dash-footer">
-            <h3><a>About</a></h3>
-            <h3><a>Network Setup</a></h3>
-            <h3><a>GitHub Repo</a></h3>
-            <h3><a>Donations</a></h3>
-        </footer>
         <div class="grid-container">
             <div>
                 <a class="dash-item" href="./views/logs.php">
@@ -115,6 +109,12 @@
             </div>
             -->
         </div>
+        <footer class="dash-footer">
+            <h3><a>About</a></h3>
+            <h3><a>LAN Version</a></h3>
+            <h3><a>GitHub</a></h3>
+            <h3><a>Support</a></h3>
+        </footer>
     </main>
 
     <script src="./static/main.js"></script>
