See README tasks

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="container">
             <div class="navbar-brand">
                 
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-black display-7" href="https://mobiri.se">Swoop.Team</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-black display-7" href="#">Swoop.Team</a></span>
             </div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <div class="hamburger">
@@ -73,7 +73,7 @@
                 <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1"><strong>Advanced Project Management</strong></h1>
                 
                 <p class="mbr-text mbr-fonts-style display-7">
-                    Team Swoop is a free web application designed to manage tasks for teams and individuals.</p>
+                    Swoop Team is a free web application designed to manage tasks for teams and individuals.</p>
                 <div class="mbr-section-btn mt-3"><a class="btn btn-info display-7" href="./authentication/signup.php">Sign Up</a>
                     <a class="btn btn-info-outline display-7" href="./authentication/login.php">Login</a></div>
             </div>
@@ -301,7 +301,7 @@
             </div>
             <div class="row row-copirayt">
                 <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-center display-7">
-                    © Copyright 2020 Team Swoop. All Rights Reserved.
+                    © Copyright 2020 Swoop Team. All Rights Reserved.
                 </p>
             </div>
         </div>
