--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                                 <h6 class="card-subtitle mbr-fonts-style mb-2 display-4">
                                     Feature #2</h6>
                                 <h5 class="card-title mbr-fonts-style display-5">
-                                    <strong>Task Delagation</strong></h5>
+                                    <strong>Task Delegation</strong></h5>
                                 <p class="mbr-text mbr-fonts-style mb-5 display-4">Keep your project on track by assigning tasks to your team mates. Communication is key when working with others<br></p>
                                 
                             </div>
@@ -163,7 +163,7 @@
                                     Feature #3</h6>
                                 <h5 class="card-title mbr-fonts-style display-5">
                                     <strong>Mobile Access</strong></h5>
-                                <p class="mbr-text mbr-fonts-style mb-5 display-4">Team Swoop was designed with mobile readablity in mind. Enabling our users to easily read their tasks from all devices.</p>
+                                <p class="mbr-text mbr-fonts-style mb-5 display-4">Swoop Team was designed with mobile readablity in mind. Enabling our users to easily read their tasks from all devices.</p>
                                 
                             </div>
                         </div>
