--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
     <div class="align-center container">
         <div class="row">
             <div class="col-12 col-lg-7">
-                <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1"><strong>Advanced Project Management</strong></h1>
+                <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1"><strong>Sociable Project Management</strong></h1>
                 
                 <p class="mbr-text mbr-fonts-style display-7">
-                    Swoop Team is a free web application designed to manage tasks for teams and individuals.</p>
+                    Swoop Team is an application designed to aid group projects in tasks management and idea sharing.</p>
                 <div class="mbr-section-btn mt-3"><a class="btn btn-info display-7" href="./authentication/signup.php">Sign Up</a>
                     <a class="btn btn-info-outline display-7" href="./authentication/login.php">Login</a></div>
             </div>
